# Sentinel-AI

./: README.md  pyproject.toml  test_rules.yar
sentinela_core/: cli.py  settings.py
sentinela_core/ai/: __init__.py  analysis.py
sentinela_core/api/: main.py
sentinela_core/api/routes/: alerts.py  health.py
sentinela_core/db/: __init__.py  base.py  models.py
sentinela_core/detection/: process_monitor.py  yara_scanner.py
sentinela_core/ui/templates/: alert_detail.html  alerts.html  base.html
